tests/ui/overloaded/overloaded-calls-nontuple.stderr
error[E0059]: type parameter to bare `FnMut` trait must be a tuple
  --> $DIR/overloaded-calls-nontuple.rs:10:6
   |
LL | impl FnMut<isize> for S {
   |      ^^^^^^^^^^^^ the trait `Tuple` is not implemented for `isize`
   |
note: required by a bound in `FnMut`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error[E0059]: type parameter to bare `FnOnce` trait must be a tuple
  --> $DIR/overloaded-calls-nontuple.rs:18:6
   |
LL | impl FnOnce<isize> for S {
   |      ^^^^^^^^^^^^^ the trait `Tuple` is not implemented for `isize`
   |
note: required by a bound in `FnOnce`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error[E0277]: functions with the "rust-call" ABI must take a single non-self tuple argument
  --> $DIR/overloaded-calls-nontuple.rs:12:5
   |
LL |     extern "rust-call" fn call_mut(&mut self, z: isize) -> isize {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Tuple` is not implemented for `isize`

error[E0277]: functions with the "rust-call" ABI must take a single non-self tuple argument
  --> $DIR/overloaded-calls-nontuple.rs:21:5
   |
LL |     extern "rust-call" fn call_once(mut self, z: isize) -> isize {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Tuple` is not implemented for `isize`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0059, E0277.
For more information about an error, try `rustc --explain E0059`.
